[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
hbbft = { git = "https://github.com/fedimint/hbbft", branch = "minimint" }
itertools = "0.10.3"
minimint = { path = "../minimint" }
minimint-api = { path = "../minimint-api" }
mint-client = { path = "../mint-client" }
rand = "0.6.5"
rayon = "1.5.0"
secp256k1-zkp = { git = "https://github.com/elsirion/rust-secp256k1-zkp", branch = "minimint", features = [ "global-context", "bitcoin_hashes" ] }
statistical = "1.0.0"
structopt = "0.3.26"
tbs = { path = "../crypto/tbs" }
tokio = { version = "1.0.1", features = ["full"] }
tracing ="0.1.22"
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }